04_K8s_Ingress_ConfigMaps_Secrets/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-config
  labels:
    purpose: ingress-configmaps-secrets
